kubernetes-hello/k8s-showcase/case-auto-scaling-plan/auth-db-plan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world
  name: auth-db-plan
  labels:
    app: auth-db
    tier: db
    env: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
      tier: db
      env: debug
  template:
    metadata:
      labels:
        app: auth-db
        tier: db
        env: debug
    spec:
      containers:
        - name: auth-db
          image: mysql/mysql-server:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-conf
              mountPath: /etc/my.cnf
              subPath: my.cnf
            - name: data-vol
              mountPath: /var/lib/mysql
            - name: dbdump-vol
              mountPath: /dbdump
          resources:
            requests:
              cpu: "1000m"
            limits:
              cpu: "1000m"
      volumes:
        - name: mysql-conf
          configMap:
            name: mysql-config-file
        - name: data-vol
          persistentVolumeClaim:
            claimName: auth-db-vol-claim
        - name: dbdump-vol
          persistentVolumeClaim:
            claimName: dbdump-vol-claim
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: hello-world
  name: auth-db
  labels:
    app: auth-db
    tier: db
    env: debug
spec:
  selector:
    app: auth-db
    tier: db
    env: debug
  ports:
    - protocol: TCP
      port: 3306
