kubernetes-hello/k8s-showcase/case-auto-scaling-plan/auth-service-plan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world
  name: auth-plan
  labels:
    app: auth-service
    tier: app
    env: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
      tier: app
      env: debug
  template:
    metadata:
      labels:
        app: auth-app
        tier: app
        env: debug
    spec:
      containers:
        - name: auth-service
          image: auth-service:1.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-conf
              mountPath: /usr/src/app/application.yaml
              subPath: application.yaml
            - name: logger-conf
              mountPath: /usr/src/app/logback.xml
              subPath: logback.xml
            - name: log-vol
              mountPath: /usr/src/app/log
          resources:
            requests:
              cpu: "1000m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
      volumes:
        - name: app-conf
          configMap:
            name: auth-service-config
        - name: logger-conf
          configMap:
            name: auth-service-logger-config
        - name: log-vol
          emptyDir: { }
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: hello-world
  name: auth-service
  labels:
    app: auth-service
    tier: app
    env: debug
spec:
  selector:
    app: auth-app
    tier: app
    env: debug
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # the port that the app serving
